test/corpus/enum_statement.txt
==============
Enum Statement
==============

enum MyEnum {
	ENUM_VALUE_NAME = 10;
}

---
(source_file
	(enum_statement
		(declaration_identifier)
		(enum_value_statement
			(declaration_identifier)
			(number)
		)
	)
)

